src/lib/syntax/parser/snapshots/catlang__syntax__parser__types__tests__const_ptr_type.snap
---
source: src/lib/syntax/parser/types.rs
expression: res
---
(1:12) Unary(
    UnaryTypeExpression {
        op: PointerTo,
        inner: (7:12) Unary(
            UnaryTypeExpression {
                op: Const,
                inner: (7:12) Simple(
                    PrimitiveType(
                        Float,
                    ),
                ),
            },
        ),
    },
)
