src/lib/syntax/parser/snapshots/catlang__syntax__parser__types__tests__named_generic_type.snap
---
source: src/lib/syntax/parser/types.rs
expression: res
---
(0:12) Simple(
    NamedType(
        NamedType {
            identifier: (0:5) "Array",
            generic_parameters: [
                (6:11) Simple(
                    PrimitiveType(
                        Float,
                    ),
                ),
            ],
        },
    ),
)
