src/lib/syntax/parser/snapshots/catlang__syntax__parser__types__tests__named_type.snap
---
source: src/lib/syntax/parser/types.rs
expression: res
---
(0:6) Simple(
    NamedType(
        NamedType {
            identifier: (0:6) "string",
            generic_parameters: [],
        },
    ),
)
