src/lib/syntax/parser/snapshots/catlang__syntax__parser__types__tests__optional_type.snap
---
source: src/lib/syntax/parser/types.rs
expression: res
---
(1:6) Unary(
    UnaryTypeExpression {
        op: Optional,
        inner: (1:6) Simple(
            PrimitiveType(
                Float,
            ),
        ),
    },
)
