src/lib/syntax/parser/snapshots/catlang__syntax__parser__types__tests__primitive_type.snap
---
source: src/lib/syntax/parser/types.rs
expression: res
---
(0:5) Simple(
    PrimitiveType(
        Float,
    ),
)
