src/lib/syntax/parser/snapshots/catlang__syntax__parser__types__tests__sized_array_type.snap
---
source: src/lib/syntax/parser/types.rs
expression: res
---
(1:7) Unary(
    UnaryTypeExpression {
        op: SizedArray,
        inner: (2:7) Simple(
            PrimitiveType(
                Float,
            ),
        ),
    },
)
