src/lib/syntax/parser/snapshots/catlang__syntax__parser__types__tests__unsized_array_type.snap
---
source: src/lib/syntax/parser/types.rs
expression: res
---
(1:9) Unary(
    UnaryTypeExpression {
        op: UnsizedArray,
        inner: (4:9) Simple(
            PrimitiveType(
                Float,
            ),
        ),
    },
)
